syntax = "proto3";

package Application;

// The job application service definition.
service ApplicationService {
  rpc CreateApplication (CreateApplicationRequest) returns (Application) {}
  rpc ReadApplication (ReadApplicationRequest) returns (Application) {}
}

message ReadApplicationRequest {
    int32 id = 1;
}

message CreateApplicationRequest {
    int32 id = 1;
    string fullname=2;
    string phone =3;
    string email=4;
    int32 cvId=5;

}

message Empty {}

// The JobApplication message represents a job application record.
message Application {
  int32 id = 1;
  string fullname=2;
  string phone =3;
  string email=4;
  int32 cvId=5;
}





